--- a/components/Memory/memory.css
+++ b/components/Memory/memory.css
@@ -146,7 +146,7 @@
 
 @media screen and (min-width: 768px) {
   .rtc-memory {
-    gap: 1.5rem;
+    gap: 2rem;
     padding-bottom: 4rem;
   }
 
